Force vertical grid to be nowrap. Fixes vertical padding grid wrapping issues seen in kitchen sink - Padding - vertical grid example

--- a/scss/xy-grid/_classes.scss
+++ b/scss/xy-grid/_classes.scss
@@ -40,7 +40,6 @@
     > .shrink {
       @include xy-cell-static(shrink, false);
     }
-
   }
 
   // Auto width
@@ -228,7 +227,7 @@
   }
 
   .grid-y {
-    @include xy-grid(vertical);
+    @include xy-grid(vertical, false);
 
 
     > .cell {
